Made big progress with basic pages, it now updates the database and added a visual page designer but it is still not hooked in with the DB.

--- a/plugins/basic-pages/config.json
+++ b/plugins/basic-pages/config.json
@@ -1,14 +1,14 @@
 {
-    "name"      : "Basic Post Plugin",
+    "name"      : "Basic Pages Plugin",
     "version"   : "1.0.0",
-    "id"        : "basic-post-plugin-2025",
-    "author"    : "H Ford",
+    "id"        : "basic-pages",
+    "author"    : "Afro Lion",
     "thumbnail" : "",
     "active"    : true,
     "index"     : 1,
     "routes"    : {
                     "on":["all"],
-                    "off":[]
+                    "off":["login","signup","home","logout"]
                   },
     "dependencies": {
                     
