most of the plugins are working -- WIP post

--- a/plugins/basic-admin/config.json
+++ b/plugins/basic-admin/config.json
@@ -1,6 +1,7 @@
 {
     "name"      : "Basic Admin",
     "id"        : "basic-admin",
+    "version"   : "1.0.0",
     "author"    : "Afro Lion",
     "thumbnail" : "",
     "active"    : true,
